logs/init_dwh_conn/build-tables/2021-11-15T20:32:56.233386+00:00/1.log
[2021-11-15 20:32:58,647] {taskinstance.py:1035} INFO - Dependencies all met for <TaskInstance: init_dwh_conn.build-tables manual__2021-11-15T20:32:56.233386+00:00 [queued]>
[2021-11-15 20:32:58,671] {taskinstance.py:1035} INFO - Dependencies all met for <TaskInstance: init_dwh_conn.build-tables manual__2021-11-15T20:32:56.233386+00:00 [queued]>
[2021-11-15 20:32:58,672] {taskinstance.py:1241} INFO - 
--------------------------------------------------------------------------------
[2021-11-15 20:32:58,672] {taskinstance.py:1242} INFO - Starting attempt 1 of 1
[2021-11-15 20:32:58,672] {taskinstance.py:1243} INFO - 
--------------------------------------------------------------------------------
[2021-11-15 20:32:58,708] {taskinstance.py:1262} INFO - Executing <Task(PostgresOperator): build-tables> on 2021-11-15 20:32:56.233386+00:00
[2021-11-15 20:32:58,712] {standard_task_runner.py:52} INFO - Started process 2046 to run task
[2021-11-15 20:32:58,724] {standard_task_runner.py:76} INFO - Running: ['***', 'tasks', 'run', 'init_dwh_conn', 'build-tables', 'manual__2021-11-15T20:32:56.233386+00:00', '--job-id', '83', '--raw', '--subdir', 'DAGS_FOLDER/initialize_dwh.py', '--cfg-path', '/tmp/tmpzs25349o', '--error-file', '/tmp/tmpzj0azrz2']
[2021-11-15 20:32:58,725] {standard_task_runner.py:77} INFO - Job 83: Subtask build-tables
[2021-11-15 20:32:58,768] {logging_mixin.py:109} INFO - Running <TaskInstance: init_dwh_conn.build-tables manual__2021-11-15T20:32:56.233386+00:00 [running]> on host e693d79b64a2
[2021-11-15 20:32:58,824] {taskinstance.py:1429} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=init_dwh_conn
AIRFLOW_CTX_TASK_ID=build-tables
AIRFLOW_CTX_EXECUTION_DATE=2021-11-15T20:32:56.233386+00:00
AIRFLOW_CTX_DAG_RUN_ID=manual__2021-11-15T20:32:56.233386+00:00
[2021-11-15 20:32:58,832] {base.py:79} INFO - Using connection to: id: postgres_dwh. Host: postgres-dwh, Port: 5432, Schema: None, Login: ***, Password: ***, extra: {}
[2021-11-15 20:32:58,836] {dbapi.py:225} INFO - Running statement: DROP TABLE IF EXISTS fact_covid;
DROP TABLE IF EXISTS dim_test;
DROP TABLE IF EXISTS dim_deaths;
DROP TABLE IF EXISTS dim_municipality;
DROP TABLE IF EXISTS dim_canton;
DROP TABLE IF EXISTS dim_infections;
DROP TABLE IF EXISTS dim_date;

CREATE TABLE dim_test (
  test_key    SERIAL PRIMARY KEY,
  positive    INTEGER,
  negative    INTEGER,
  total       INTEGER,
  positivity_rate INTEGER,
  source          TEXT,
  created_date VARCHAR(50)
);

CREATE TABLE dim_deaths (
  deaths_key SERIAL PRIMARY KEY,
  amount INTEGER,
  canton VARCHAR(50),
  created_date VARCHAR(50)
);

CREATE TABLE dim_infections (
  infection_key SERIAL PRIMARY KEY,
  confirmed REAL,
  canton VARCHAR(50),
  created_date VARCHAR(50)
);


CREATE TABLE fact_covid (
    covid_key     SERIAL PRIMARY KEY,
    dim_test      INTEGER,
    dim_deaths    INTEGER,
    dim_infections INTEGER,
    created_date TIMESTAMP NOT NULL DEFAULT current_timestamp,

    CONSTRAINT fk_test
      FOREIGN KEY(dim_test)
	  REFERENCES dim_test(test_key),

    CONSTRAINT fk_deaths
      FOREIGN KEY(dim_deaths)
    REFERENCES dim_deaths(deaths_key),

    CONSTRAINT fk_infections
      FOREIGN KEY(dim_infections)
	  REFERENCES dim_infections(infection_key),
);, parameters: None
[2021-11-15 20:32:58,836] {taskinstance.py:1703} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1332, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1458, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1514, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 52: );
         ^

[2021-11-15 20:32:58,848] {taskinstance.py:1280} INFO - Marking task as FAILED. dag_id=init_dwh_conn, task_id=build-tables, execution_date=20211115T203256, start_date=20211115T203258, end_date=20211115T203258
[2021-11-15 20:32:58,865] {standard_task_runner.py:91} ERROR - Failed to execute job 83 for task build-tables
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/task/task_runner/standard_task_runner.py", line 85, in _start_by_fork
    args.func(args, dag=self.dag)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/cli_parser.py", line 48, in command
    return func(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/cli.py", line 92, in wrapper
    return f(*args, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 292, in task_run
    _run_task_by_selected_method(args, dag, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 107, in _run_task_by_selected_method
    _run_raw_task(args, ti)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/cli/commands/task_command.py", line 184, in _run_raw_task
    error_file=args.error_file,
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/utils/session.py", line 70, in wrapper
    return func(*args, session=session, **kwargs)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1332, in _run_raw_task
    self._execute_task_with_callbacks(context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1458, in _execute_task_with_callbacks
    result = self._execute_task(context, self.task)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/taskinstance.py", line 1514, in _execute_task
    result = execute_callable(context=context)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 69, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 205, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/dbapi.py", line 229, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ")"
LINE 52: );
         ^

[2021-11-15 20:32:58,889] {local_task_job.py:154} INFO - Task exited with return code 1
[2021-11-15 20:32:58,916] {local_task_job.py:264} INFO - 0 downstream tasks scheduled from follow-on schedule check
